# squid_copy

./: .gitignore  1  Makefile.in  RELEASENOTES.html  aclocal.m4  config.status  configure  configure.ac  fast_config.sh  fast_config_ssl.sh  gmon.out  libtool
src/optimack/: .pdx.log.swp  Makefile.am  Makefile.in  Optimack.cc  Optimack.cc.backup  Optimack.h  Optimack_gprof.cc  Optimack_gprof.h  checksum.cc  checksum.h  configure_squid_https.sh  get_server_key.c  get_server_key.h  get_server_key.h.old  get_server_key_old.h  get_server_key_single.h  globals.h  gprof_small_program.cc  hping2.cc  hping2.h  install_apache2_from_source.sh  install_boost.sh  install_for_cn_server.sh  install_for_foreign_server.sh  install_http_server.sh  install_openssl.sh  interval.cc  interval.h  interval_boost.cc  interval_boost.h  interval_geeks.cc  interval_geeks.h  logging.cc  logging.h  makefile_gprof_small.sh  makefile_tls_decoder.sh  makefile_tls_decoder_new.sh  netfilter_queue.cc  netfilter_queue.h  nfq.cc  (+29 more)
src/optimack/analyze/: .pyplot_range_group_throughput.py.swp  get_tcp_rtt.py  interval.py  loss_rate_optimack_client.py  loss_rate_optimack_end2end.py  num_conn_needed.py  pair_speed_delay.py  parse_delay_file.py  parse_info_files.py  parse_outfile.py  parse_range_file.py  parse_range_group_throughput.py  parse_squid_output_csv.py  possibility.py  pyplot_browser.py  pyplot_curl.py  pyplot_delay.py  pyplot_lossrate_cn.py  pyplot_optim_effi.py  pyplot_pareto.py  pyplot_range.py  pyplot_range_group_throughput.py  validate_info_file_result.py
src/optimack/test/: ABtest_onerun.sh  ABtest_onerun_cn.sh  ABtest_onerun_tls.sh  detect_packet_loss_on_all.sh  filesize.csv  gather_overall_loss.py  http_oack_client  http_oack_client.cpp  iperf3_server_udp_lossrate0.1_10ms.txt  iperf3_server_udp_lossrate0.1_50ms.txt  iperf3_server_udp_lossrate0.txt  iperf3_server_udp_lossrate10_50ms.txt  iperf3_udp_lossrate0.4_50ms.txt  iperf3_udp_lossrate0.5_50ms.txt  iperf3_udp_lossrate0.6_50ms.txt  iperf3_udp_lossrate0.7_50ms.txt  iperf3_udp_lossrate0.8_50ms.txt  iperf3_udp_lossrate0.9_50ms.txt  iperf3_udp_lossrate1.5_50ms.txt  iperf3_udp_lossrate10_50ms.txt  iperf3_udp_lossrate1_50ms.txt  iperf3_udp_lossrate2.5_50ms.txt  iperf3_udp_lossrate2_50ms.txt  is_slowdown.py  ks.sh  (+51 more)
(+223 files in other folders)
