## Copyright (C) 1996-2020 The Squid Software Foundation and contributors
##
## Squid software is distributed under GPLv2+ license and includes
## contributions from numerous individuals and organizations.
## Please see the COPYING and CONTRIBUTORS files for details.
##

## Our code
include $(top_srcdir)/src/Common.am
include $(top_srcdir)/src/TestHeaders.am

noinst_LTLIBRARIES = liboptim.la

liboptim_la_SOURCES = \
	checksum.h \
	hping2.c \
	hping2.h \
	sendtcp.c \
	socket.c \
	socket.h \
	thr_pool.c \
	thr_pool.h \
	util.c \
	util.h
